# Content_checking_agent

./: .gitignore  README.md  app_gui.py  history.db  pyproject.toml
installer/: DegreeCompare.iss
scripts/: build_exe.ps1  build_installer.ps1  inspect_response.py
src/content_checking_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/degree_compare/: __init__.py  __main__.py  cli.py  comparison.py  config.py  constants.py  gemini_client.py  gui.py  history_db.py  secret_store.py
