[project]
name = "content-checking-agent"
version = "0.1.0"
description = "Semantic comparison tool for Finnish university degree descriptions"
readme = "README.md"
authors = [
    { name = "Student Success Lab", email = "support@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "google-genai>=0.6.0",
]

[project.scripts]
degree-compare = "degree_compare.cli:cli_entry"
degree-compare-gui = "degree_compare.gui:launch_gui"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
